Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38578

Dynamically created QtQuick Dialogs not working on Android device

XMLWordPrintable

    • Android
    • 0f4266fbbc45fc311051d9bfb014fb162c383c3e

      For example if FileDialog is created dynamic way using Qt.createQmlObject() it doesn't show up in Android device. Tested on 4.1.2 and 4.4.2 Android versions. Same code works in desktop.

      Same thing happens with all QtQuick Dialog components.

      // Works on android
      FileDialog {
      id: fileOpenDialog;
      visible: false;
      }
      
      // Doesn't work on android
      var fileDialog = Qt.createQmlObject('\
      import QtQuick 2.2
      import QtQuick.Controls 1.1
      import QtQuick.Dialogs 1.1;
        FileDialog {
           id: fileOpenDialogAlt;
           visible: true;
          }', mainWindow, "fileDialogDynamic");
      

      Please, check the attached application.

        For Gerrit Dashboard: QTBUG-38578
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            anylitok Antti Yli-Tokola (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes